<resources>
    <string name="app_name">Pre90Secs</string>
    <string name="fetch_workout_button">Fetch a workout</string>
    <string name="pref_category_title_difficulty">Difficulty</string>
    <string name="pref_category_title_body_region">Choose a Focus</string>
    <string name="pref_summary_body_region">Choose a body region to focus on</string>

    <string name="pref_title_upper_body">Upper Body</string>
    <string name="pref_title_core">Core</string>
    <string name="pref_title_lower_body">Lower Body</string>
    <string name="pref_title_cardio">Cardio</string>
    <string name="pref_title_whole_body">Whole Body</string>

    <string name="pref_title_limited_space">Limited Space</string>

    <string name="title_activity_settings">Settings</string>
    <string name="start_workout">START WORKOUT</string>
    <string name="timer">TIMER</string>
    <string name="save">SAVE</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="enter_instruction">Enter Instruction</string>

</resources>
