<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.allie.pre90secs.fragment.FilterOptionsFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:weightSum="100">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="10dp"
           android:text="@string/pref_category_title_difficulty"
           android:textSize="25sp"
           android:textColor="@color/subtitle_grey"
           android:layout_weight="5"/>

       <View
           android:layout_width="match_parent"
           android:layout_height="1sp"
           android:background="@color/subtitle_grey" />

  <RadioGroup
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/difficultyRadioGroup"
      android:layout_weight="5">

     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/easyRadioButton"
         android:text="@string/easy"
         android:textColor="@color/subtitle_grey"
         android:textSize="20sp"
         android:layout_weight="5"
         android:checked="true"/>
     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/mediumRadioButton"
         android:text="@string/medium"
         android:textColor="@color/subtitle_grey"
         android:textSize="20sp"
         android:layout_weight="5"/>
      <RadioButton
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/hardRadioButton"
          android:text="@string/hard"
          android:textColor="@color/subtitle_grey"
          android:textSize="20sp"
          android:layout_weight="5" />
  </RadioGroup>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="10dp"
           android:textColor="@color/subtitle_grey"
           android:text="@string/pref_category_title_body_region"
           android:textSize="25sp"
           android:layout_weight="5"/>

           <View
               android:layout_width="match_parent"
               android:layout_height="1sp"
               android:background="@color/subtitle_grey" />

       <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/upperRegionCheckBox"
           android:text="@string/pref_title_upper_body"
           android:textColor="@color/subtitle_grey"
           android:textSize="20sp"
           android:layout_weight="5"/>
       <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/lowerRegionCheckBox"
           android:textColor="@color/subtitle_grey"
           android:text="@string/pref_title_lower_body"
           android:textSize="20sp"
           android:layout_weight="5"/>
       <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/coreRegionCheckBox"
           android:textColor="@color/subtitle_grey"
           android:text="@string/pref_title_core"
           android:textSize="20sp"
           android:layout_weight="5"/>
       <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/cardioRegionCheckBox"
           android:textColor="@color/subtitle_grey"
           android:text="@string/pref_title_cardio"
           android:textSize="20sp"
           android:layout_weight="5"/>
       <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/wholeBodyRegionCheckBox"
           android:textColor="@color/subtitle_grey"
           android:text="@string/pref_title_whole_body"
           android:textSize="20sp"
           android:layout_weight="5" />

       <View
           android:layout_width="match_parent"
           android:layout_height="1sp"
           android:background="@color/subtitle_grey" />

       <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/limitedSpaceCheckBox"
           android:textColor="@color/subtitle_grey"
           android:text="@string/pref_title_limited_space"
           android:textSize="20sp"
           android:padding="5dp"/>

       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/save_button"
           android:text="@string/save"
           android:textSize="20sp"
           android:padding="5dp"/>

       </LinearLayout>
</FrameLayout>
